deployment/kubernetes/manifests/ccnp-perf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccnp-perf
spec:
  selector:
    matchLabels:
      app: ccnp-perf
  template:
    metadata:
      labels:
        app: ccnp-perf
      annotations:
        "ccnp.cc-api/require": "true"
    spec:
      containers:
      - name: ccnp-perf
        image: "docker.io/library/ccnp-perf:latest"
        imagePullPolicy: IfNotPresent
      nodeSelector:
        intel.feature.node.kubernetes.io/tdx-guest: enabled
