deployment/kubernetes/manifests/cima-server-deployment.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cima-server
  namespace: cima
  labels:
    app: cima-server
spec:
  selector:
    matchLabels:
      app: cima-server
  template:
    metadata:
      labels:
        app: cima-server
      annotations:
        "cima.cc-api/require": "true"
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: cima-server
        image: docker.io/library/cima-server:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 100M
            cpu: 1
        volumeMounts:
          - name: proc
            mountPath: /proc
          - name: eventlog-entry
            mountPath: /run/firmware/acpi/tables/CCEL
          - name: eventlog-data
            mountPath: /run/firmware/acpi/tables/data/CCEL
          - name: ima-data
            mountPath: /run/kernel/security/
          - name: vsock-port
            mountPath: /etc/tdx-attest.conf
          - name: tsm-report
            mountPath: /run/cima/tsm/
      volumes:
        - name: proc
          hostPath:
            path: /proc
            type: Directory
        - name: eventlog-data
          hostPath:
            path: /sys/firmware/acpi/tables/data/CCEL
            type: File
        - name: eventlog-entry
          hostPath:
            path: /sys/firmware/acpi/tables/CCEL
            type: File
        - name: ima-data
          hostPath:
            path: /sys/kernel/security/
            type: Directory
        - name: vsock-port
          hostPath:
            path: /etc/tdx-attest.conf
            type: File
        - name: tsm-report
          hostPath:
            path: /sys/kernel/config/tsm/report/cima/
            type: Directory
      nodeSelector:
        "feature.node.kubernetes.io/cpu-security.tdx.protected": "true"
